<?xml version="1.0" encoding="UTF-8"?>
<!-- This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this
   - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.3.6.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<modelVersion>4.0.0</modelVersion>
	<groupId>io.mosip.esignet</groupId>
	<artifactId>esignet-parent</artifactId>
	<version>1.3.0</version>
	<packaging>pom</packaging>
	<name>esignet</name>
	<description>Parent project of MOSIP e-Signet</description>
	<url>https://github.com/mosip/esignet</url>

	<licenses>
          <license>
                <name>MPL 2.0</name>
                <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
          </license>
        </licenses>

	<scm>
                <connection>scm:git:git://github.com/mosip/esignet.git</connection>
                <developerConnection>scm:git:ssh://github.com:mosip/esignet.git</developerConnection>
                <url>https://github.com/mosip/esignet</url>
                <tag>HEAD</tag>
        </scm>

	<developers>
                <developer>
                  <name>Mosip</name>
                  <email>mosip.emailnotifier@gmail.com</email>
                  <organization>io.mosip</organization>
                  <organizationUrl>https://github.com/mosip/esignet</organizationUrl>
                </developer>
        </developers>

    <repositories>
        <repository>
            <id>ossrh</id>
            <name>CentralRepository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
            <layout>default</layout>
            <snapshots>
            <enabled>true</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>central</id>
            <name>MavenCentral</name>
            <layout>default</layout>
            <url>https://repo1.maven.org/maven2</url>
            <snapshots>
            <enabled>false</enabled>
            </snapshots>
        </repository>
		<repository>
			<id>danubetech-maven-public</id>
			<url>https://repo.danubetech.com/repository/maven-public/</url>
		</repository>
    </repositories>

	<distributionManagement>
                <snapshotRepository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
                <repository>
                        <id>ossrh</id>
                        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
        </distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- maven -->
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jacoco.version>0.8.5</maven.jacoco.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<maven.javadoc.version>3.2.0</maven.javadoc.version>
		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>

		<spring-cloud.version>Hoxton.SR8</spring-cloud.version>
		<spring.boot.version>2.3.6.RELEASE</spring.boot.version>

		<sonar.exclusions>**/dto/**,**/entity/**,**/exception/**,**/spi/**,**/advice/**,**/config/**,**/constants/**</sonar.exclusions>
		<sonar.cpd.exclusions>**/dto/**,**/entity/**,**/config/**</sonar.cpd.exclusions>
	</properties>

	<modules>
		<module>esignet-core</module>
		<module>esignet-integration-api</module>
		<module>esignet-service</module>
		<module>binding-service-impl</module>
        <module>client-management-service-impl</module>
        <module>oidc-service-impl</module>
		<module>consent-service-impl</module>
		<module>vci-service-impl</module>
    </modules>

	<profiles>
		<profile>
			<id>sonar</id>
			<properties>
				<sonar.sources>.</sonar.sources>
				<sonar.inclusions>src/main/java/**,src/main/resources/**</sonar.inclusions>
				<sonar.exclusions>${sonar.coverage.exclusions}</sonar.exclusions>
				<sonar.host.url>https://sonarcloud.io</sonar.host.url>
			</properties>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonarsource.scanner.maven</groupId>
						<artifactId>sonar-maven-plugin</artifactId>
						<version>${maven.sonar.plugin.version}</version>
						<executions>
							<execution>
								<phase>verify</phase>
								<goals>
									<goal>sonar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

			<profile>
				<id>openapi-doc-generate-profile</id>
				<build>
					<plugins>
						<plugin>
							<groupId>org.springframework.boot</groupId>
							<artifactId>spring-boot-maven-plugin</artifactId>
							<version>${spring.boot.version}</version>
							<configuration>
								<executable>true</executable>
								<layout>ZIP</layout>
							</configuration>
							<executions>
								<execution>
									<id>pre-integration-test</id>
									<goals>
										<goal>start</goal>
									</goals>
									<configuration>
										<folders>
											<folder>src/test/resources</folder>
										</folders>
										<profiles>
											<profile>openapi-profile</profile>
										</profiles>
										<arguments>
											<argument>--server.port=8090</argument>
											<argument>--server.servlet.path=/app/generic</argument>
										</arguments>

									</configuration>
								</execution>
								<execution>
									<id>post-integration-test</id>
									<goals>
										<goal>stop</goal>
									</goals>
								</execution>
								<execution>
									<goals>
										<goal>build-info</goal>
										<goal>repackage</goal>
									</goals>
								</execution>
							</executions>
						</plugin>
						<plugin>
							<groupId>org.springdoc</groupId>
							<artifactId>springdoc-openapi-maven-plugin</artifactId>
							<version>0.2</version>
							<executions>
								<execution>
									<id>integration-test</id>
									<goals>
										<goal>generate</goal>
									</goals>
								</execution>
							</executions>
							<configuration>
								<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs</apiDocsUrl>
								<outputFileName>openapi.json</outputFileName>
								<outputDir>${project.build.directory}</outputDir>
								<skip>false</skip>
							</configuration>
						</plugin>
					</plugins>
				</build>
			</profile>

	</profiles>

	<build>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven.surefire.plugin.version}</version>
					<configuration>
						<skipTests>${skipTests}</skipTests>
						<skip>false</skip>
						<argLine>
							${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED --illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${maven.jacoco.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>prepare-package</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven.jar.plugin.version}</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Project-Name>${project.name}</Project-Name>
								<Project-Version>${project.version}</Project-Version>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>${maven.war.plugin.version}</version>
					<configuration>
						<archive>
							<manifest>
								<addClasspath>true</addClasspath>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							</manifest>
							<manifestEntries>
								<Project-Name>${project.name}</Project-Name>
								<Project-Version>${project.version}</Project-Version>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${maven.javadoc.version}</version>
					<executions>
						<execution>
					 		<id>attach-javadocs</id>
					  		<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
                         <doclint>none</doclint>
                	</configuration>
               </plugin>
				<plugin>
				 	 <groupId>org.sonatype.plugins</groupId>
				 	 <artifactId>nexus-staging-maven-plugin</artifactId>
				  	 <version>1.6.7</version>
				  	 <extensions>true</extensions>
				  	 <configuration>
						<serverId>ossrh</serverId>
						<nexusUrl>https://oss.sonatype.org/</nexusUrl>
						<autoReleaseAfterClose>false</autoReleaseAfterClose>
				  	</configuration>
				</plugin>

		 		<plugin>
				  	<groupId>org.apache.maven.plugins</groupId>
				  	<artifactId>maven-source-plugin</artifactId>
				  	<version>2.2.1</version>
				  	<executions>
						<execution>
							<id>attach-sources</id>
					  		<goals>
								<goal>jar-no-fork</goal>
					  		</goals>
						</execution>
				  	</executions>
				</plugin>
				<plugin>
				  	<groupId>org.apache.maven.plugins</groupId>
				  	<artifactId>maven-gpg-plugin</artifactId>
				  	<version>1.5</version>
				  	<executions>
					      <execution>
						     	<id>sign-artifacts</id>
						  	<phase>verify</phase>
						  	<goals>
								<goal>sign</goal>
						  	</goals>
						        <configuration>
                						<gpgArguments>
                    							<arg>--pinentry-mode</arg>
                    							<arg>loopback</arg>
                						</gpgArguments>
            		 				</configuration>
					      </execution>
				  	</executions>
				</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<forceJavacCompilerUse>true</forceJavacCompilerUse>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
    			<groupId>pl.project13.maven</groupId>
			<artifactId>git-commit-id-plugin</artifactId>
			<version>3.0.1</version>
			<executions>
        			<execution>
			        	<id>get-the-git-infos</id>
					<goals>
						<goal>revision</goal>
            				</goals>
            				<phase>validate</phase>
 				</execution>
 			</executions>
 			<configuration>
				<generateGitPropertiesFile>true</generateGitPropertiesFile>
				<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
                    		<includeOnlyProperties>
                        		<includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                        		<includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                    		</includeOnlyProperties>
                    		<commitIdGenerationMode>full</commitIdGenerationMode>
 				<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
				 <format>json</format>
			</configuration>
			</plugin>
		</plugins>
	</build>
</project>